[package]
name = "rusty-relay"
version = "0.0.1"
authors = ["Jesse Brookins <jessebrookins@protonmail.com>"]
edition = "2021"

[dependencies]
libc = "*"
mio = { version = "0.7", features = ["os-util", "os-poll", "udp"] }
serde = "*"
serde_derive = "*"
bincode = "*"
log = "*"
env_logger = "*"
dns-lookup = "*"
snap = "*"
rand = "*"
transient-hashmap = "*"
ring = "*"
clap = "2.33.0"

